# movierama

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  run-dev.sh
.github/workflows/: deploy-backend.yml
movierama/: asgi.py  settings.py  urls.py  wsgi.py
movies/: models.py  services.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies/templates/: 400.html  403.html  404.html  500.html  base.html  login.html  movie_form.html  movie_list.html  signup.html
