[tool.poetry]
name = "movierama"
version = "0.1.0"
description = "Social movie sharing platform with Django"
authors = ["Georgios Nikolopoulos <you@example.com>"]
packages = [{ include = "movies" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.1"
psycopg = "^3.2.9"
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.0"
isort = "^6.0.1"
pytest = "^8.2"
pytest-django = "^4.8"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
